# de_demo

./: .gitignore  README.md  dagster.yaml  dbt_project.yml  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: sessions.sql  users_activity.sql
dbt/models/staging/: __sources.yaml  stg_site_events.sql
de_demo/: README.md
de_demo/api/: buffer.py  cli.py  main.py  router.py  routes.py  settings.py
de_demo/api_clients/metabase/: cli.py  main.py  models.py
de_demo/apps/events/: cli.py  settings.py
de_demo/cli/: README.md  main.py
de_demo/dagster/: dbt.py  definitions.py
de_demo/dbt/: cli.py
de_demo/migrations/: cli.py  settings.py
de_demo/migrations/clickhouse/: 0001_create_events.py  0002_add_demo_events.py  README.md
de_demo/migrations/metabase/: main.py
de_demo/settings/: main.py
de_demo/warehouse/: settings.py
de_demo/warehouse/clickhouse/: __init__.py  fields.py
docker/: README.md  de-demo.dockerfile  de-demo.dockerfile.dockerignore  docker-compose.bi.yml  docker-compose.dagster.yml  docker-compose.monitoring.yml  docker-compose.warehouse.yml  docker-compose.yml  metabase.dockerfile  metabase.dockerfile.dockerignore
docker/clickhouse/: config.xml
docker/dagster/: daemon-entrypoint.sh
docker/grafana/: demo_dashboard.json
docker/prometheus/: prometheus.yml
docs/: lambda_arch.md
tests/: README.md  conftest.py
tests/integration_tests/: conftest.py
tests/integration_tests/dbt/: test_cli.py
tests/unit_tests/: conftest.py
tests/unit_tests/api/: test_buffer.py
tests/utils/: environment.py
(+23 files in other folders)
