[project]
name = "de-demo"
version = "0.0.2"
description = ""
authors = [
    {name = "Александр Петров",email = "petrov.a.o-86@yandex.ru"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "infi-clickhouse-orm (>=2.1.3,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "dbt-core (>=1.8.0,<1.9.0)",
    "dbt-clickhouse (>=1.8.9,<2.0.0)",
    "dagster-webserver (>=1.10.9,<2.0.0)",
    "dagster-postgres (>=0.26.9,<0.27.0)",
    "dagster (>=1.10.9,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
setuptools = "^78.1.0"
coverage = "^7.7.1"
pytest-asyncio = "^0.26.0"

[tool.poetry.scripts]
de-demo = "de_demo.cli.main:run"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "-p no:warnings"
markers = ["unit", "integration", "other"]